2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/bin/slt.in: Compile tests with `-lm'.

2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add support for C99 math on MT-alpha.

	* lib/include/cfloat.h,
	* lib/include/cmath.h: Declare C99 math.
	
	* lib/src/missing_uclibc_math.c: New.
	
	* lib/src/mtalpha/m/acosf.o,
	* lib/src/mtalpha/m/acoshf.o,
	* lib/src/mtalpha/m/asinf.o,
	* lib/src/mtalpha/m/asinhf.o,
	* lib/src/mtalpha/m/atan2f.o,
	* lib/src/mtalpha/m/atanf.o,
	* lib/src/mtalpha/m/atanhf.o,
	* lib/src/mtalpha/m/cabsf.o,
	* lib/src/mtalpha/m/carg.o,
	* lib/src/mtalpha/m/cargf.o,
	* lib/src/mtalpha/m/cbrtf.o,
	* lib/src/mtalpha/m/ceilf.o,
	* lib/src/mtalpha/m/copysignf.o,
	* lib/src/mtalpha/m/cosf.o,
	* lib/src/mtalpha/m/coshf.o,
	* lib/src/mtalpha/m/e_acos.o,
	* lib/src/mtalpha/m/e_acosh.o,
	* lib/src/mtalpha/m/e_asin.o,
	* lib/src/mtalpha/m/e_atan2.o,
	* lib/src/mtalpha/m/e_atanh.o,
	* lib/src/mtalpha/m/e_cosh.o,
	* lib/src/mtalpha/m/e_exp.o,
	* lib/src/mtalpha/m/e_fmod.o,
	* lib/src/mtalpha/m/e_gamma.o,
	* lib/src/mtalpha/m/e_gamma_r.o,
	* lib/src/mtalpha/m/e_hypot.o,
	* lib/src/mtalpha/m/e_j0.o,
	* lib/src/mtalpha/m/e_j1.o,
	* lib/src/mtalpha/m/e_jn.o,
	* lib/src/mtalpha/m/e_lgamma.o,
	* lib/src/mtalpha/m/e_lgamma_r.o,
	* lib/src/mtalpha/m/e_log.o,
	* lib/src/mtalpha/m/e_log10.o,
	* lib/src/mtalpha/m/e_log2.o,
	* lib/src/mtalpha/m/e_pow.o,
	* lib/src/mtalpha/m/e_rem_pio2.o,
	* lib/src/mtalpha/m/e_remainder.o,
	* lib/src/mtalpha/m/e_scalb.o,
	* lib/src/mtalpha/m/e_sinh.o,
	* lib/src/mtalpha/m/e_sqrt.o,
	* lib/src/mtalpha/m/erfcf.o,
	* lib/src/mtalpha/m/erff.o,
	* lib/src/mtalpha/m/exp2f.o,
	* lib/src/mtalpha/m/expf.o,
	* lib/src/mtalpha/m/expm1f.o,
	* lib/src/mtalpha/m/fabsf.o,
	* lib/src/mtalpha/m/fdimf.o,
	* lib/src/mtalpha/m/floorf.o,
	* lib/src/mtalpha/m/fmaf.o,
	* lib/src/mtalpha/m/fmaxf.o,
	* lib/src/mtalpha/m/fminf.o,
	* lib/src/mtalpha/m/fmodf.o,
	* lib/src/mtalpha/m/frexpf.o,
	* lib/src/mtalpha/m/hypotf.o,